--- a/configure.ac
+++ b/configure.ac
@@ -64,7 +64,8 @@ esac
 AC_CACHE_SAVE
 
 ## TODO:2003 Add the dependencies of your project here.
-
+AC_SEARCH_LIBS([pow], [m])
+AC_SEARCH_LIBS([ffopentest], [cfitsio])
 ## PKG_CHECK_MODULES([JANSSON], [jansson >= 2.1])
 
 AC_CACHE_SAVE
